--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@theguild/remark-mermaid": "^0.3.0",
+    "lucide-react": "^0.525.0",
     "next": "^15.0.2",
     "nextra": "^4.2.17",
     "nextra-theme-docs": "^4.2.17",
