--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.4",
     "@theguild/remark-mermaid": "^0.3.0",
     "lucide-react": "^0.525.0",
     "next": "^15.0.2",
